--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+data
 # Created by https://www.gitignore.io/api/linux,macos,latex,python,pycharm,windows,intellij+all,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=linux,macos,latex,python,pycharm,windows,intellij+all,visualstudiocode
 
