--- a/web/server/Dockerfile
+++ b/web/server/Dockerfile
@@ -1,6 +1,4 @@
-FROM tiangolo/uwsgi-nginx-flask:python3.6-alpine3.7
-RUN apk --update add bash nano
-ENV STATIC_URL /static
-ENV STATIC_PATH /var/www/app/static
+FROM tiangolo/uwsgi-nginx-flask:python3.8
 COPY ./requirements.txt /var/www/requirements.txt
-RUN pip install -r /var/www/requirements.txt
+COPY ./final.h5 ./overfit.h5 ./encoder_config.json /var/www/
+RUN pip install --upgrade pip && pip install -r /var/www/requirements.txt
