--- a/web/server/Dockerfile
+++ b/web/server/Dockerfile
@@ -1,4 +1,5 @@
 FROM tiangolo/uwsgi-nginx-flask:python3.8
-COPY ./requirements.txt /var/www/requirements.txt
-COPY ./final.h5 ./overfit.h5 ./encoder_config.json /var/www/
-RUN pip install --upgrade pip && pip install -r /var/www/requirements.txt
+COPY ./requirements.txt /app/requirements.txt
+RUN pip install --upgrade pip && pip install -r /app/requirements.txt
+COPY ./final.h5 ./overfit.h5 ./encoder_config.json /app/
+COPY . /app
